testData/diagnostic/unknownTypeNames.h
some_non_existing_type fun();

bool b;

boolean c;

int single_int;

int int double_int;
